--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,11 @@ main {
   padding: 50px 30px;
 }
 :root {
-  --primary: #8c54ff;
-  --secondary: #f3a847;
-  --tertiary: #b12704;
-  --light: #fafafa;
-  --dark: #000000;
+  --primary: #A6979C; 
+  --secondary: #D3C0D2; 
+  --tertiary: #D0ffD6;
+  --light: #d5e2bc;
+  --dark: #DAFFEF ;
   --darker: #111111;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
@@ -33,7 +33,7 @@ body {
   font-size: 18px;
   letter-spacing: 0.1em;
   background: var(--dark);
-  color: var(--light);
+  color: var(--primary);
   font-family: 'Poiret One', cursive;
 }
 
