Layed out html and started converting to components.

--- a/src/assets/layout/layout.html
+++ b/src/assets/layout/layout.html
@@ -13,10 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
     <link rel="manifest" href="/images/site.webmanifest">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -24,9 +21,7 @@
     <header>
         <div class="head-container">
             <h1 class="right">
-                <a href="/"><span class="headbracket">
-                    </span><span class="headmini">Dani codes</span><span class="headbracket">
-                    </span></a>
+                <a href="/">Dani codes</a><img src="img/pixels4.png" height="30" width="30" border="0" />
             </h1>
 
 
@@ -39,25 +34,33 @@
         </div>
     </header>
     <main>
+        <section>
+            <h3>Welcome</h3>
 
+            <p>Blah blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah
+                blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah
+                blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah
+                blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah
+                blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah
+                blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah
+                blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah
+                blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah
+                blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah
+                blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah
+                blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah
+                blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah
+            </p>
+        </section>
 
 
 
     </main>
     <footer>
-
-        <span class="welcome">Welcome!
-        </span>
-        <br><span class="logged-in"></span>
-
-        Thanks for visiting!
+        Thank you for visiting!
         <br>
-        <span class="copyends">© the</span><span class="copytech"> TECH
-        </span></span><span class="copyends">blog</span>
+        <span class="copyends">© webprinc3ss</span>
     </footer>
 
-
-    <script src="/javascript/logout.js"></script>
 
 </body>
 
