--- a/src/index.css
+++ b/src/index.css
@@ -1,291 +1,422 @@
-main {
-  margin: 0 auto;
-  max-width: 90%;
-  padding: 50px 30px;
-}
-:root {
-  --primary: #A6979C; 
-  --secondary: #D3C0D2; 
-  --tertiary: #D0ffD6;
-  --light: #d5e2bc;
-  --dark: #DAFFEF ;
-  --darker: #111111;
-  --error: rgb(228, 46, 1);
-  --spacing-one: calc(1rem * 0.5);
-  --spacing-two: calc(1rem);
-  --spacing-five: calc(2.5rem);
-}
-
 * {
   box-sizing: border-box;
 }
 
-html,
-body {
+html {
+  position: relative;
   min-height: 100%;
-}
+  }
 
 body {
-  margin: 0;
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: #ff0d7b;
+}
+
+body, html {
+  height: 100%;
   padding: 0;
-  font-weight: 600;
-  line-height: 1.5;
-  font-size: 18px;
-  letter-spacing: 0.1em;
-  background: var(--dark);
-  color: var(--primary);
-  font-family: 'Poiret One', cursive;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  margin: 5px 0;
-  line-height: 1.25;
-}
-
-h1 {
-  font-size: 2.25rem;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-size: 1.75rem;
-}
-
-h4 {
-  font-size: 1.5rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-}
-
-h6 {
-  font-size: 1rem;
-}
-
-p {
-  font-size: 1.1rem;
-  margin-top: 0;
+  margin: 0 0 100px; 
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 300;
+  color: #fff;
 }
 
 a {
-  color: var(--tertiary);
   text-decoration: none;
+  color: #fff;
   font-weight: bold;
+  transition: color .5s;
 }
 
 a:hover {
-  text-decoration: underline;
-}
-
-header {
-  background: var(--dark);
-}
-
-header a {
-  color: var(--light);
+  color: #f80265;
 }
 
 button {
-  font-size: 1rem;
-  text-decoration: none;
-  padding: 0.25rem 1rem;
-  border-radius: 0.5rem;
-  border: none;
-  outline: none;
+  background-color: #0067e8;
+  border: 0;
+  padding: 5px;
+  color: white;
+  font-weight: bold;
+  transition: background-color .1s;
   cursor: pointer;
-  margin: 0 1px;
-  background-color: var(--secondary);
+  border-radius: 5px;
 }
 
 button:hover {
-  opacity: 0.8;
+  background-color: #f80265;
 }
 
-button[disabled] {
-  cursor: default;
-  opacity: 0.8;
+/* .post-list {
+  margin: 0;
+  padding: 0;
+
+} */
+
+textarea, input {
+  padding: .5%;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  height: 30px;
+  width: 100%;
 }
 
-img {
-  max-width: 100%;
-}
-
-span[role='img'] {
-  cursor: default;
-}
-
-form {
-  width: 40%;
-}
-
-input {
-  font-size: 1rem;
-  padding: 0.25rem;
-  border: 1px solid var(--dark);
+textarea:focus, input:focus {
   outline: none;
-  border-radius: 3px;
-  transition: box-shadow 0.2s;
-}
-
-input:focus {
-  border: 1px solid var(--secondary);
-  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
-}
-
-li {
-  list-style: none;
-}
-
-nav a:hover {
-  text-decoration: none;
-}
-
-nav li {
-  cursor: pointer;
+  border: 1px solid #fa4568;
 }
 
 textarea {
-  width: 600px;
-  height: 120px;
-  border: 3px solid #cccccc;
-  padding: 5px;
+  width: 100%;
+  min-height: 200px;
+  font-size: 15px;
 }
 
-.container {
-  width: 85%;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+form {
+  width:100%;
 }
 
-.flex-row {
+form > div {
+  margin-bottom: 2%;
+}
+
+form label {
+  display: block;
+}
+
+header {
+  height: 85px;
+  /* background-image: linear-gradient(black, #590004, #a50104); */
   display: flex;
-  flex-wrap: wrap;
-}
-
-.space-between {
-  justify-content: space-between;
-}
-
-.flex-end {
-  justify-content: flex-end;
-}
-
-.mx-1 {
-  margin-right: var(--spacing-one);
-  margin-left: var(--spacing-one);
-}
-
-.mx-2 {
-  margin-right: var(--spacing-two);
-  margin-left: var(--spacing-two);
-}
-
-.my-1 {
-  margin-top: var(--spacing-one);
-  margin-bottom: var(--spacing-one);
-}
-
-.my-2 {
-  margin-top: var(--spacing-two);
-  margin-bottom: var(--spacing-two);
-}
-
-.my-5 {
-  margin-top: var(--spacing-five);
-  margin-bottom: var(--spacing-five);
-}
-
-.px-1 {
-  padding-right: var(--spacing-one);
-  padding-left: var(--spacing-one);
-}
-
-.px-2 {
-  padding-right: var(--spacing-two);
-  padding-left: var(--spacing-two);
-}
-
-.py-1 {
-  padding-top: var(--spacing-one);
-  padding-bottom: var(--spacing-one);
-}
-
-.py-2 {
-  padding-top: var(--spacing-two);
-  padding-bottom: var(--spacing-two);
-}
-
-.card {
-  width: 25%;
-  text-align: center;
-}
-
-.img-thumbnail {
-  width: auto;
-  height: 300px;
-  margin-bottom: 50px;
-  cursor: pointer;
-}
-
-.modalBackdrop {
-  background: rgba(0, 0, 0, 0.65);
-  bottom: 0;
-  left: 0;
-  overflow: auto;
-  position: fixed;
-  right: 0;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1%;
+  background-color: #ff0d7b;
+  /* -webkit-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+  -moz-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+  box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49); */
+  position: sticky;
+  position: -webkit-sticky;
   top: 0;
-  z-index: 1;
+  z-index: 9999;
 }
 
-.modalContainer {
-  background: var(--darker);
-  border-radius: 5px;
-  max-width: 100%;
-  margin: 50px auto;
-  padding: 15px;
-  width: 960px;
+.head-container {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
 }
 
-.modalTitle {
-  font-size: 18px;
-  font-weight: 600;
-  margin-bottom: 25px;
+.right {
+  width: 60%;
+  text-align:left;
 }
 
-button {
-  background: var(--primary);
-  border: 0;
-  border-radius: 5px;
+.right a {
   color: #fff;
+}
+
+.right a:hover {
+  color: #fff;
+}
+
+header h1 a {
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 500;
+  font-size: 30px;
+  color: #fff;
+  letter-spacing: 2px;
+  padding: 0px;
+  width:33%;
+}
+h1 {
+  min-width: 220px;
+  padding-right: 5px;
+  padding-left:5px;
+}
+
+h2 {
+  color:  #000;
+  /* text-align: center; */
+  /* font-size: 170%;
+  color:  #000;
+  text-align: center;
+  letter-spacing: 2px; */
+}
+
+h3 {
+  font-size: 150%;
+  margin-bottom: 5px;
+  letter-spacing: 2px;
+}
+
+header h1 a:hover {
+  color:#fff !important;
+}
+
+.headmini {
+  font-size: 30px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 500;
+  margin-right: 0px;
+  margin-left: 0px;
+  padding: 0px;
+  color: #fff;
+}
+
+nav {
+  font-weight: normal;
+  width:60%;
+  text-align:right;
+  padding: 0px;
+  padding-top: 15px;
+  letter-spacing: 2px;
+}
+
+nav a {
+  color: #fff;
+  font-size: 18px;
+  padding-left: 20px;
+}
+
+nav a:hover {
+  color: #eaef3a;
+}
+
+main {
+
+  padding: 0% 25%;
+  z-index: 8000;
+  position: relative;
+  background-attachment: fixed;
+  /* display: flex; */
+  /* justify-content: center; */
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+}
+
+section {
+  background-attachment: scroll;
+  padding: 10px 10px;
+  /* margin-bottom: 25px;
+  box-shadow: 0px 3px 8px 3px rgba(0,0,0,0.25);
+  background: rgba(255, 255, 255, 0.95);
+  border: 1px solid #fa4568;
+  border-radius: 25px;
+  display: flex;
+  justify-content: left;
+  width:100%;
+  min-width: 375px;
+  margin-bottom:100px; */
+} 
+
+/* .center-content {
+  display: flex;
+  justify-content: center;
+}
+ */
+/* article {
+  width: 100%;
+}
+ */
+/* .post-section {
+  background-attachment: scroll;
+  box-shadow: 0px 3px 8px 3px rgba(0,0,0,0.25);
+  padding: 10px;
+  margin-bottom: 25px;
+  background: rgba(255, 255, 255, 0.95);
+  width: 100%;
+  border: 1px solid #fa4568;
+  border-radius: 25px;
+  min-width: 375px;
+} */
+
+/* .post-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom:100px;
+} */
+
+.section-form {
+  background-attachment: scroll;
+  box-shadow: 0px 3px 8px 3px rgba(0,0,0,0.25);
+  padding: 10px 20px;
+  margin-bottom: 25px;
+  background: rgba(255, 255, 255, 0.95);
+  border: 1px solid #fa4568;
+  border-radius: 25px;
+  width:100%;
+  margin-bottom:100px;
+  min-width: 375px;
+}
+
+.form-center {
+  display: flex;
+  justify-content: center;
+  width: 300px;
+}
+
+.btn-no-style {
+  background: none;
+  border: none;
+  padding: 0;
   cursor: pointer;
-  font-size: 16px;
-  font-weight: 600;
-  margin-bottom: 30px;
-  padding: 10px 15px;
+  text-decoration: none;
+  color: #eaef3a;
+  font-size: 100%;
+  font-weight: bold;
+  transition: color .1s;
+  margin-left: 16px;
 }
 
-a {
-  border-radius: 5px;
-  color: var(--primary);
-  font-weight: 600;
-  padding: 2px 4px;
-  margin-left: -2px;
-  margin-right: -2px;
+.btn-no-style:hover {
+  background: none;
+  color: #fff;
 }
 
-.navActive {
-  color: var(--secondary);
+.login-form .signup-form {
+  width: 200px;
+  line-height: 25px;
+}
+
+.delete-post-btn {
+  background-color: #ff643d;
+}
+
+.delete-post-btn:hover {
+  background-color: #f80265;
+}
+
+/* .post {
+  margin-bottom: 2%;
+  line-height: 150%;
+} */
+
+/* .diamond {
+  text-align:center;
+  color: #fa4568;
+  font-size: 1.2em;
+} */
+
+.post .title span {
+  font-style: italic;
+  font-size: 90%;
+  color: #7d7d7d;
+}
+
+.edit-link {
+  display: block;
+  margin: -1.5% 0 2% 0;
+}
+
+.comment-form {
+  margin-bottom: 5%;
+}
+
+.comment {
+  padding: 1%;
+  margin-bottom: 1%;
+}
+
+.comment:nth-child(odd) {
+  background-color: #d4e8ec;
+}
+
+.byline {
+  font-size: 90% !important;
+  margin-bottom: 15px;
+  color: #fff;
+}
+
+.comment .meta {
+  font-size: 90% !important;
+  margin-bottom: .5%;
+  opacity: .6;
+}
+
+.new-post-form input {
+  width: 100%;
+}
+
+.edit-post-form {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+.spacebottom {
+  margin-bottom: 100px;
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 100px;
+  width: 100%;
+  color:#FFFFFF; 
+  background-color: #ff0d7b;
+  font-size:1.5em;
+  line-height: 24px;
+  text-align: center;
+  padding: 15px;
+  z-index: 9999;
+      /* background-image: linear-gradient(#ff0d7b,#ff0d7b,#00378e); */
+  /* -webkit-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+  -moz-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+  box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49); */
+}
+
+.welcome {
+  color:  #eaef3a;
+  letter-spacing: 2px;
+}
+
+/* .logged-in {
+  font-size: .7em;
+  letter-spacing: 1px;
+}
+ */
+.copytech {
+  font-size: 12px;
+  color: #fa4568;
+  letter-spacing: 2px;
+}
+
+.copyends {
+  font-size: 12px;
+  color: #fff;
+  letter-spacing: 2px;
+}
+
+@media screen and (max-width: 800px)  {
+  main {
+    padding: 0;
+  }
+
+.right {
+  font-size: 13px;
+}
+
+h1 {
+font-size: 12px;
+text-align:center;
+}
+
+.headmini {
+  font-size: 20px;
+}
+
+.headbracket {
+  font-size: 20px;
+}
+
+nav {
+  font-size: 13px;
+}
 }
