--- a/src/assets/layout/css/styles.css
+++ b/src/assets/layout/css/styles.css
@@ -8,23 +8,23 @@
     }
   
   body {
-    background-image: url("/images/colorful_code.jpg");
     background-size: cover;
     background-attachment: fixed;
-    background: #250001;
+    background-color: #ff0d7b;
   }
   
   body, html {
     height: 100%;
     padding: 0;
     margin: 0 0 100px; 
-    font-family: 'Roboto', sans-serif;
-    color: #333;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 300;
+    color: #fff;
   }
   
   a {
     text-decoration: none;
-    color: #0067e8;
+    color: #fff;
     font-weight: bold;
     transition: color .5s;
   }
@@ -48,11 +48,11 @@
     background-color: #f80265;
   }
   
-  .post-list {
+  /* .post-list {
     margin: 0;
     padding: 0;
   
-  }
+  } */
   
   textarea, input {
     padding: .5%;
@@ -84,18 +84,18 @@
   form label {
     display: block;
   }
-  
+
   header {
     height: 85px;
-    background-image: linear-gradient(black, #590004, #a50104);
+    /* background-image: linear-gradient(black, #590004, #a50104); */
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 1%;
-    background-color: #00378e;
-    -webkit-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+    background-color: #ff0d7b;
+    /* -webkit-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
     -moz-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
-    box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+    box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49); */
     position: sticky;
     position: -webkit-sticky;
     top: 0;
@@ -110,12 +110,12 @@
   }
   
   .right {
-    width: 30%;
+    width: 60%;
     text-align:left;
   }
   
   .right a {
-    color: #eaef3a;
+    color: #fff;
   }
   
   .right a:hover {
@@ -123,10 +123,11 @@
   }
   
   header h1 a {
-    font-family: 'Share Tech', monospace;
-    font-size: 6vh;
-    font-weight: strong;
-    color: #eaef3a;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    font-size: 30px;
+    color: #fff;
+    letter-spacing: 2px;
     padding: 0px;
     width:33%;
   }
@@ -137,10 +138,12 @@
   }
   
   h2 {
-    font-size: 170%;
+    color:  #000;
+    /* text-align: center; */
+    /* font-size: 170%;
     color:  #000;
     text-align: center;
-    letter-spacing: 2px;
+    letter-spacing: 2px; */
   }
   
   h3 {
@@ -150,31 +153,32 @@
   }
   
   header h1 a:hover {
-    color:#f99535 !important;
+    color:#fff !important;
   }
   
   .headmini {
-    font-size: 4.2vh;
-    font-family: 'Lily Script One', cursive;
-    margin-right: 3px;
-    margin-left: 3px;
-    color: #eaef3a;
-  }
-  
-  .headbracket {
-    font-size: 5vh;
-    font-family: 'Roboto', sans-serif;
-    color: #f3f3f3;
+    font-size: 30px;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding: 0px;
+    color: #fff;
   }
   
   nav {
-    width:30%;
+    font-weight: normal;
+    width:60%;
     text-align:right;
+    padding: 0px;
+    padding-top: 15px;
+    letter-spacing: 2px;
   }
   
   nav a {
-    color: #f3f3f3;
-    padding-left: 10px;
+    color: #fff;
+    font-size: 18px;
+    padding-left: 20px;
   }
   
   nav a:hover {
@@ -182,23 +186,24 @@
   }
   
   main {
-    padding: 2% 25%;
+
+    padding: 0% 25%;
     z-index: 8000;
     position: relative;
     background-attachment: fixed;
-    display: flex;
-    justify-content: center;
+    /* display: flex; */
+    /* justify-content: center; */
     background-size: cover;
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
   }
   
-  section {
+ section {
     background-attachment: scroll;
+    padding: 10px 10px;
+    /* margin-bottom: 25px;
     box-shadow: 0px 3px 8px 3px rgba(0,0,0,0.25);
-    padding: 10px 20px;
-    margin-bottom: 25px;
     background: rgba(255, 255, 255, 0.95);
     border: 1px solid #fa4568;
     border-radius: 25px;
@@ -206,19 +211,19 @@
     justify-content: left;
     width:100%;
     min-width: 375px;
-    margin-bottom:100px;
-  }
+    margin-bottom:100px; */
+  } 
   
-  .center-content {
+  /* .center-content {
     display: flex;
     justify-content: center;
   }
-  
-  article {
+   */
+  /* article {
     width: 100%;
   }
-  
-  .post-section {
+   */
+  /* .post-section {
     background-attachment: scroll;
     box-shadow: 0px 3px 8px 3px rgba(0,0,0,0.25);
     padding: 10px;
@@ -228,15 +233,15 @@
     border: 1px solid #fa4568;
     border-radius: 25px;
     min-width: 375px;
-  }
+  } */
   
-  .post-container {
+  /* .post-container {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     margin-bottom:100px;
-  }
+  } */
   
   .section-form {
     background-attachment: scroll;
@@ -288,16 +293,16 @@
     background-color: #f80265;
   }
   
-  .post {
+  /* .post {
     margin-bottom: 2%;
     line-height: 150%;
-  }
+  } */
   
-  .diamond {
+  /* .diamond {
     text-align:center;
     color: #fa4568;
     font-size: 1.2em;
-  }
+  } */
   
   .post .title span {
     font-style: italic;
@@ -326,7 +331,7 @@
   .byline {
     font-size: 90% !important;
     margin-bottom: 15px;
-    color: #0067e8;
+    color: #fff;
   }
   
   .comment .meta {
@@ -355,16 +360,16 @@
     height: 100px;
     width: 100%;
     color:#FFFFFF; 
-    background-color: #00378e;
-    background-image: linear-gradient(#00378e, black);
+    background-color: #ff0d7b;
     font-size:1.5em;
     line-height: 24px;
     text-align: center;
     padding: 15px;
     z-index: 9999;
-    -webkit-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+        /* background-image: linear-gradient(#ff0d7b,#ff0d7b,#00378e); */
+    /* -webkit-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
     -moz-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
-    box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+    box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49); */
   }
   
   .welcome {
@@ -372,11 +377,11 @@
     letter-spacing: 2px;
   }
   
-  .logged-in {
+  /* .logged-in {
     font-size: .7em;
     letter-spacing: 1px;
   }
-  
+   */
   .copytech {
     font-size: 12px;
     color: #fa4568;
