--- a/src/index.css
+++ b/src/index.css
@@ -298,7 +298,7 @@ footer {
   position: relative;
   width: 325px;
 
-  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  box-shadow: 0 3px 6px #eaef3a, 0 3px 6px #eaef3a;
   text-align: left;
 }
 
