--- a/src/index.css
+++ b/src/index.css
@@ -213,8 +213,14 @@ main {
 .dani-image {
   height: 150px; 
   border-radius: 50%;
+  border: solid 1px #ff0d7b;
   box-shadow: 0px 0px 30px 20px #eaef3a;
   text-align: center;
+}
+
+.about-container {
+  max-width: 550px;
+  min-width: 200px;
 }
 
 .laptop {
@@ -294,29 +300,43 @@ footer {
 .card {
   background: #fff;
   border-radius: 2px;
-  height: 325px;
+  border: 1px solid darkblue;
+  height: 425px;
   margin: 0rem;
   position: relative;
   width: 325px;
-
-  box-shadow: 0 3px 6px #eaef3a, 0 3px 6px #eaef3a;
+  box-shadow: 0px 0px 30px 20px #eaef3a;
+  /* box-shadow: 0 3px 6px #eaef3a, 0 3px 6px #eaef3a; */
   text-align: left;
 }
 
 .card > .img-container {
-  height: 60%;
+  height: 45%;
   overflow: hidden;
   text-align: center;
-  background-color:#ff0d7b;
+  background-color: darkblue;
+  border-bottom: thin solid #000;
+  
 }
+
 .card > .img-container > img {
-  width: 100%
+  width: 100%;
+  height: 100%;
+}
+
+.card > .card-header {
+  /* height: 8%; */
+  font-size: 16px;
+  background-color: darkblue;
+  text-align: center;
+  overflow: hidden;
 }
 
 .card > .content {
   padding-left: .2rem;
   padding-right: .2rem;
   font-size: 12px;
+  height: 55%;
 }
 
 .card > .content > ul {
@@ -326,7 +346,7 @@ footer {
 .card > .content > ul > li {
   /* margin-top: 18px; */
   line-height: 18px;
-  color: black;
+  color: darkblue;
   
 }
 /* 
