--- a/src/index.css
+++ b/src/index.css
@@ -299,19 +299,19 @@ footer {
 /* Project Cards */
 .card {
   background: #fff;
-  border-radius: 2px;
   border: 1px solid darkblue;
-  height: 425px;
+  height: 375px;
   margin: 0rem;
   position: relative;
   width: 325px;
   box-shadow: 0px 0px 30px 20px #eaef3a;
   /* box-shadow: 0 3px 6px #eaef3a, 0 3px 6px #eaef3a; */
   text-align: left;
+  margin-bottom: 70px;
 }
 
 .card > .img-container {
-  height: 45%;
+  height: 35%;
   overflow: hidden;
   text-align: center;
   background-color: darkblue;
@@ -321,22 +321,24 @@ footer {
 
 .card > .img-container > img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .card > .card-header {
-  /* height: 8%; */
-  font-size: 16px;
+  height: 10%;
+  font-size: 18px;
   background-color: darkblue;
   text-align: center;
   overflow: hidden;
+  /* border-top-right-radius:10%;
+  border-top-left-radius:10%; */
 }
 
 .card > .content {
-  padding-left: .2rem;
-  padding-right: .2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   font-size: 12px;
-  height: 55%;
+  height: 45%;
 }
 
 .card > .content > ul {
@@ -346,17 +348,33 @@ footer {
 .card > .content > ul > li {
   /* margin-top: 18px; */
   line-height: 18px;
-  color: darkblue;
+  color: #000;
+  padding-top: 5px;
+  padding-bottom: 5px;
   
 }
-/* 
-ul.card {
+
+.card > .card-footer {
+  height: 10%;
+  font-size: 16px;
+  /* background-color: darkblue; */
+  text-align: center;
+  overflow: hidden;
+}
+
+h4 {
+  /* border-top-right-radius:10%;
+  border-top-left-radius:10%; */
+  padding-top: 1%;
+  padding-bottom: 2%;
+  margin: 0px;
+}
+
+h5 {
   padding: 0px;
-} */
-
-
-
-
+  margin: 0px;
+  color: #000;
+}
 
 @media screen and (max-width: 800px)  {
   main {
