--- a/src/index.css
+++ b/src/index.css
@@ -238,7 +238,7 @@ textarea {
 }
 
 form {
-  width:100%;
+  width:500px;
 }
 
 form > div {
@@ -382,6 +382,7 @@ span ,.copyends {
 h4 {
   /* border-top-right-radius:10%;
   border-top-left-radius:10%; */
+  text-align: center;
   padding-top: 1%;
   padding-bottom: 2%;
   margin: 0px;
@@ -394,6 +395,9 @@ h5 {
 }
 
 @media screen and (max-width: 800px)  {
+  header {
+  height: 120px;
+  }
   main {
     padding: 0;
   }
