--- a/src/index.css
+++ b/src/index.css
@@ -185,7 +185,7 @@ main {
 }
 
 .laptop {
-  width: 250px;
+  width: 200px;
   text-align: center;
   padding-top: 40px;
 }
@@ -394,6 +394,39 @@ h5 {
   color: #000;
 }
 
+/* Resume Grid*/
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  /* background-color: #2196F3; */
+  padding: 10px;
+}
+.grid-item {
+  /* background-color: rgba(255, 255, 255, 0.8); */
+  /* border: 1px solid rgba(0, 0, 0, 0.8); */
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  display: block;
+}
+ul .skillset {
+  display: block;
+}
+
+p.skills {
+  text-align: left;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+h5 {
+  font-size: 24px;
+  line-height: 30px;
+  color: #eaef3a;
+  text-align: left;
+}
+
 @media screen and (max-width: 800px)  {
   header {
   height: 120px;
@@ -437,6 +470,13 @@ ul {
 
 nav li {
   font-size: 15px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto;
+  /* background-color: #2196F3; */
+  padding: 10px;
 }
 
 .fab ,.fa-github, .fa-linkedin, .fa-twitter  {
