--- a/src/index.css
+++ b/src/index.css
@@ -388,10 +388,18 @@ h4 {
   margin: 0px;
 }
 
-h5 {
-  padding: 0px;
+h5 ,.cardH5 {
+  font-size: 16px;
   margin: 0px;
   color: #000;
+  text-align: center;
+}
+
+h5 {
+  font-size: 24px;
+  line-height: 30px;
+  color: #eaef3a;
+  text-align: left;
 }
 
 /* Resume Grid*/
@@ -420,12 +428,7 @@ p.skills {
   line-height: 16px;
 }
 
-h5 {
-  font-size: 24px;
-  line-height: 30px;
-  color: #eaef3a;
-  text-align: left;
-}
+
 
 @media screen and (max-width: 800px)  {
   header {
@@ -470,6 +473,14 @@ ul {
 
 nav li {
   font-size: 15px;
+}
+
+form {
+  width:100%;
+}
+
+.contactH4 {
+  padding-bottom: 20px;
 }
 
 .grid-container {
