--- a/src/index.css
+++ b/src/index.css
@@ -101,11 +101,6 @@ header h1 a:hover {
 
 nav {
   font-weight: normal;
-  /* width:30%; */
-  /* text-align:right; */
-  /* padding: 0px; */
-  /* padding-top: 50px; */
-  /* padding-top: 15px; */
   letter-spacing: 2px;
   margin-top: 20px;
   width: 50%;
@@ -118,11 +113,6 @@ ul {
   flex-wrap: wrap;
   justify-content: space-between;
   padding-inline-start: 0px;
-  /* text-align:right; */
-
-  /* margin-top: 5px;
-  padding: 5px; */
-  /* align-self: baseline; */
 }
 
 ul.navUl {
@@ -275,15 +265,12 @@ footer {
   position: fixed;
   left: 0;
   bottom: 0;
-  /* height: 150px; */
   width: 100%;
   color:#FFFFFF; 
   background-color: #ff0d7b;
   font-size:1.5em;
   line-height: 24px;
   text-align: center;
-  /* padding: 0px;
-  margin: 0px; */
   z-index: 9999;
 }
 
@@ -323,12 +310,11 @@ span ,.copyends {
 .card {
   background: #fff;
   border: 1px solid darkblue;
-  height: 375px;
+  height: 400px;
   margin: 0rem;
   position: relative;
   width: 325px;
   box-shadow: 0px 0px 30px 20px #eaef3a;
-  /* box-shadow: 0 3px 6px #eaef3a, 0 3px 6px #eaef3a; */
   text-align: left;
   margin-bottom: 70px;
 }
@@ -344,7 +330,6 @@ span ,.copyends {
 
 .card > .img-container > img {
   width: 100%;
-  /* height: 100%; */
 }
 
 .card > .card-header {
@@ -353,15 +338,13 @@ span ,.copyends {
   background-color: darkblue;
   text-align: center;
   overflow: hidden;
-  /* border-top-right-radius:10%;
-  border-top-left-radius:10%; */
 }
 
 .card > .content {
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 12px;
-  height: 45%;
+  height: 40%;
 }
 
 .card > .content > ul {
@@ -369,7 +352,6 @@ span ,.copyends {
 }
 
 .card > .content > ul > li {
-  /* margin-top: 18px; */
   line-height: 18px;
   color: #000;
   padding-top: 5px;
@@ -379,10 +361,19 @@ span ,.copyends {
 
 .card > .card-footer {
   height: 10%;
-  font-size: 16px;
-  /* background-color: darkblue; */
   text-align: center;
   overflow: hidden;
+}
+
+
+.cardH6 {
+  font-size: 14px;
+  margin-bottom: 0px  !important;
+  color: #000;
+  text-align: center;
+  font-weight: strong;
+  padding: 0px !important;
+
 }
 
 ul .cardLi {
@@ -393,20 +384,13 @@ display:block;
 }
 
 h4 {
-  /* border-top-right-radius:10%;
-  border-top-left-radius:10%; */
   text-align: center;
   padding-top: 1%;
   padding-bottom: 2%;
   margin: 0px;
 }
 
-h5 ,.cardH5 {
-  font-size: 16px;
-  margin: 0px;
-  color: #000;
-  text-align: center;
-}
+
 
 h5 {
   font-size: 24px;
@@ -420,12 +404,9 @@ h5 {
 .grid-container {
   display: grid;
   grid-template-columns: auto auto;
-  /* background-color: #2196F3; */
   padding: 10px;
 }
 .grid-item {
-  /* background-color: rgba(255, 255, 255, 0.8); */
-  /* border: 1px solid rgba(0, 0, 0, 0.8); */
   padding: 20px;
   font-size: 30px;
   text-align: center;
@@ -499,7 +480,6 @@ form {
 .grid-container {
   display: grid;
   grid-template-columns: auto;
-  /* background-color: #2196F3; */
   padding: 10px;
 }
 
