--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ html {
 body {
   background-size: cover;
   background-attachment: fixed;
-  background-color: #ff0d7b;
+  background-color: pink;
+  background-image: url('assets/img/hrrrhcwwarx.jpeg');
 }
 
 body, html {
@@ -30,12 +31,15 @@ header {
   justify-content: center;
   align-items: center;
   padding: 0 1%;
-  background-color: #ff0d7b;
+ background-color: #ff0d7b;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
   z-index: 9999;
-  width: 100%
+  width: 100%;
+  -webkit-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+  -moz-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+  box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
 }
 
 .head-container {
@@ -160,7 +164,7 @@ main {
   padding: 0% 25%;
   z-index: 8000;
   position: relative;
-  background-color: #ff0d7b;
+  /* background-color: pink; */
   background-attachment: fixed;
   background-size: cover;
   display: flex;
@@ -272,6 +276,9 @@ footer {
   line-height: 24px;
   text-align: center;
   z-index: 9999;
+  -webkit-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+  -moz-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
+  box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
 }
 
 footer p {
