--- a/src/index.css
+++ b/src/index.css
@@ -198,6 +198,20 @@ p.center {
 section {
   background-attachment: scroll;
   padding: 10px 10px;
+  box-shadow: 0px 3px 8px 3px rgba(0,0,0,0.25);
+  /* padding: 10px 20px;
+  margin-bottom: 25px; */
+  background: rgba(255, 255, 255, 0.95);
+  border: 1px solid #fa4568;
+  border-radius: 25px;
+  /* display: flex;
+  justify-content: left;
+  width:100%; */
+  /* min-width: 375px;
+  margin-bottom:100px; */
+
+
+
 } 
 
 
