--- a/src/assets/layout/layout.html
+++ b/src/assets/layout/layout.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <main>
-        <section>
+        <section id="container">
             <h3>Welcome</h3>
 
             <p>Blah blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah blah blah blah blah Blah
