--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body, html {
   margin: 0 0 100px; 
   font-family: 'Quicksand', sans-serif;
   font-weight: 400;
-  color: #fff;
+  color: darkblue;
   font-size: 18px;
   line-height:30px ;
 }
@@ -66,7 +66,7 @@ header h1 a {
   font-family: 'Quicksand', sans-serif;
   font-weight: 500;
   font-size: 30px;
-  color: #fff;
+  color: darkblue;
   letter-spacing: 2px;
   padding: 0px;
   width:33%;
@@ -78,7 +78,7 @@ h1 {
 }
 
 h2 {
-  color:  #fff;
+  color:  darkblue;
   text-align: center;
   font-size: 50px;
 }
@@ -194,10 +194,13 @@ p.center {
   text-align: center;
 }
 
-
 section {
   background-attachment: scroll;
   padding: 10px 10px;
+}
+
+section#container {
+
   box-shadow: 0px 3px 8px 3px rgba(0,0,0,0.25);
   /* padding: 10px 20px;
   margin-bottom: 25px; */
